# backend/admin/admin_server.gen.go
@@ -1,6 +1,6 @@
 // Package admin provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.13.4 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.14.0 DO NOT EDIT.
 package admin
 
 import (
@@ -8,9 +8,9 @@ import (
 	"net/http"
 	"time"
 
-	"github.com/deepmap/oapi-codegen/pkg/runtime"
-	openapi_types "github.com/deepmap/oapi-codegen/pkg/types"
 	"github.com/gin-gonic/gin"
+	"github.com/oapi-codegen/runtime"
+	openapi_types "github.com/oapi-codegen/runtime/types"
 )
 
 const (
@@ -44,14 +44,16 @@ const (
 	KeySize4096 KeyParametersSize = 4096
 )
 
-// Defines values for PolicyID.
+// Defines values for PolicyType.
 const (
-	PolicyIDCertEnroll PolicyID = "cert-enrollment"
+	PolicyTypeCertIssue   PolicyType = "certIssue"
+	PolicyTypeCertRequest PolicyType = "certRequest"
 )
 
 // Defines values for TestNamespaceId.
 const (
-	TestNamespaceIDStrRootCA TestNamespaceId = "00000001-0000-0000-0000-000000000001"
+	N00000001000000000000100000000001 TestNamespaceId = "00000001-0000-0000-0000-100000000001"
+	TestNamespaceIDStrRootCA          TestNamespaceId = "00000001-0000-0000-0000-000000000001"
 )
 
 // Defines values for WellKnownNamespaceIDStr.
@@ -71,34 +73,15 @@ const (
 	AcceptX509CaCert GetCertificateV1ParamsAccept = "application/x-x509-ca-cert"
 )
 
-// CertificateEnrollmentParameters defines model for CertificateEnrollmentParameters.
-type CertificateEnrollmentParameters struct {
-	DelegatedService *string            `json:"delegatedService,omitempty"`
-	IssuerID         openapi_types.UUID `json:"issuerId"`
-	KeyParameters    KeyParameters      `json:"keyParameters"`
+// CertificateIssurancePolicyParameters defines model for CertificateIssurancePolicyParameters.
+type CertificateIssurancePolicyParameters struct {
+	AllowedKeyTypes     []KeyParameters      `json:"allowedKeyTypes"`
+	AllowedNamespaceIDs []openapi_types.UUID `json:"allowedNamespaceIds"`
+	AllowedUsages       []CertificateUsage   `json:"allowedUsages"`
 
-	// Validity RFC3339 duration string
-	Validity string `json:"validity"`
-}
-
-// CertificateEnrollmentPolicy defines model for CertificateEnrollmentPolicy.
-type CertificateEnrollmentPolicy struct {
-	DelegatedService *string            `json:"delegatedService,omitempty"`
-	PolicyID         PolicyID           `json:"id"`
-	IssuerID         openapi_types.UUID `json:"issuerId"`
-	KeyParameters    KeyParameters      `json:"keyParameters"`
-
-	// NamespaceId Unique ID of the namespace
-	NamespaceID openapi_types.UUID `json:"namespaceId"`
-
-	// UpdatedAt Time when the policy was last updated
-	UpdatedAt time.Time `json:"updatedAt"`
-
-	// UpdatedBy Unique ID of the user who created the policy
-	UpdatedBy string `json:"updatedBy"`
-
-	// Validity RFC3339 duration string
-	Validity string `json:"validity"`
+	// IssuerId ID of the current issuer certificate
+	IssuerID    openapi_types.UUID `json:"issuerId"`
+	MaxValidity DurationSpec       `json:"maxValidity"`
 }
 
 // CertificateRef defines model for CertificateRef.
@@ -124,6 +107,19 @@ type CertificateRef struct {
 	// NotAfter Expiration date of the certificate
 	NotAfter time.Time        `json:"notAfter"`
 	Usage    CertificateUsage `json:"usage"`
+}
+
+// CertificateRequestPolicyParameters defines model for CertificateRequestPolicyParameters.
+type CertificateRequestPolicyParameters struct {
+	// AutoRenewalThreshold Number of days left to trigger renewal, (0, 1) range indicates percentage
+	AutoRenewalThreshold *float32 `json:"autoRenewalThreshold,omitempty"`
+
+	// IssuerNamespaceId ID of the issuer namespace
+	IssuerNamespaceID openapi_types.UUID `json:"issuerNamespaceId"`
+	KeyParameters     *KeyParameters     `json:"keyParameters,omitempty"`
+	Subject           CertificateSubject `json:"subject"`
+	Usage             CertificateUsage   `json:"usage"`
+	Validity          DurationSpec       `json:"validity"`
 }
 
 // CertificateSubject defines model for CertificateSubject.
@@ -166,10 +162,17 @@ type CreateCertificateParameters struct {
 	Validity        *string                   `json:"validity,omitempty"`
 }
 
+// DurationSpec defines model for DurationSpec.
+type DurationSpec struct {
+	Days   int32 `json:"days"`
+	Months int32 `json:"months"`
+	Years  int32 `json:"years"`
+}
+
 // KeyParameters defines model for KeyParameters.
 type KeyParameters struct {
 	Curve *KeyParametersCurve `json:"curve,omitempty"`
-	Kty   *KeyParametersKty   `json:"kty,omitempty"`
+	Kty   KeyParametersKty    `json:"kty"`
 	Size  *KeyParametersSize  `json:"size,omitempty"`
 }
 
@@ -182,15 +185,15 @@ type KeyParametersKty string
 // KeyParametersSize defines model for KeyParameters.Size.
 type KeyParametersSize int32
 
-// PolicyID defines model for PolicyId.
-type PolicyID string
-
-// PolicyRef defines model for PolicyRef.
-type PolicyRef struct {
-	PolicyID PolicyID `json:"id"`
+// Policy defines model for Policy.
+type Policy struct {
+	CertIssue   *CertificateIssurancePolicyParameters `json:"certIssue,omitempty"`
+	CertRequest *CertificateRequestPolicyParameters   `json:"certRequest,omitempty"`
+	ID          openapi_types.UUID                    `json:"id"`
 
 	// NamespaceId Unique ID of the namespace
 	NamespaceID openapi_types.UUID `json:"namespaceId"`
+	Type        PolicyType         `json:"type"`
 
 	// UpdatedAt Time when the policy was last updated
 	UpdatedAt time.Time `json:"updatedAt"`
@@ -199,14 +202,36 @@ type PolicyRef struct {
 	UpdatedBy string `json:"updatedBy"`
 }
 
+// PolicyParameters defines model for PolicyParameters.
+type PolicyParameters struct {
+	CertIssue   *CertificateIssurancePolicyParameters `json:"certIssue,omitempty"`
+	CertRequest *CertificateRequestPolicyParameters   `json:"certRequest,omitempty"`
+	Type        PolicyType                            `json:"type"`
+}
+
+// PolicyRef defines model for PolicyRef.
+type PolicyRef struct {
+	ID openapi_types.UUID `json:"id"`
+
+	// NamespaceId Unique ID of the namespace
+	NamespaceID openapi_types.UUID `json:"namespaceId"`
+	Type        PolicyType         `json:"type"`
+
+	// UpdatedAt Time when the policy was last updated
+	UpdatedAt time.Time `json:"updatedAt"`
+
+	// UpdatedBy Unique ID of the user who created the policy
+	UpdatedBy string `json:"updatedBy"`
+}
+
+// PolicyType defines model for PolicyType.
+type PolicyType string
+
 // TestNamespaceId defines model for TestNamespaceId.
 type TestNamespaceId string
 
 // WellKnownNamespaceIDStr defines model for WellKnownNamespaceId.
 type WellKnownNamespaceIDStr string
-
-// NamespaceID defines model for namespaceId.
-type NamespaceID = openapi_types.UUID
 
 // GetCertificateV1Params defines parameters for GetCertificateV1.
 type GetCertificateV1Params struct {
@@ -219,26 +244,26 @@ type GetCertificateV1ParamsAccept string
 // CreateCertificateV1JSONRequestBody defines body for CreateCertificateV1 for application/json ContentType.
 type CreateCertificateV1JSONRequestBody = CreateCertificateParameters
 
-// PutPolicyCertEnrollV1JSONRequestBody defines body for PutPolicyCertEnrollV1 for application/json ContentType.
-type PutPolicyCertEnrollV1JSONRequestBody = CertificateEnrollmentParameters
+// PutPolicyV1JSONRequestBody defines body for PutPolicyV1 for application/json ContentType.
+type PutPolicyV1JSONRequestBody = PolicyParameters
 
 // ServerInterface represents all server handlers.
 type ServerInterface interface {
-	// Create certificate
-	// (POST /v1/{namespaceId}/certificate)
-	CreateCertificateV1(c *gin.Context, namespaceID NamespaceID)
-	// Get certificate
-	// (GET /v1/{namespaceId}/certificate/{id})
-	GetCertificateV1(c *gin.Context, namespaceID NamespaceID, id openapi_types.UUID, params GetCertificateV1Params)
 	// List certificates
 	// (GET /v1/{namespaceId}/certificates)
-	ListCertificatesV1(c *gin.Context, namespaceID NamespaceID)
-	// Get Certificate Enrollment Policy
-	// (GET /v1/{namespaceId}/policy/cert-enrollment)
-	GetPolicyCertEnrollV1(c *gin.Context, namespaceID NamespaceID)
-	// Put Certificate Enrollment Policy
-	// (PUT /v1/{namespaceId}/policy/cert-enrollment)
-	PutPolicyCertEnrollV1(c *gin.Context, namespaceID NamespaceID)
+	ListCertificatesV1(c *gin.Context, namespaceId openapi_types.UUID)
+	// Create certificate
+	// (POST /v1/{namespaceId}/certificates)
+	CreateCertificateV1(c *gin.Context, namespaceId openapi_types.UUID)
+	// Get certificate
+	// (GET /v1/{namespaceId}/certificates/{id})
+	GetCertificateV1(c *gin.Context, namespaceId openapi_types.UUID, id openapi_types.UUID, params GetCertificateV1Params)
+	// Get Certificate Policy
+	// (GET /v1/{namespaceId}/policies/{policyId})
+	GetPolicyV1(c *gin.Context, namespaceId openapi_types.UUID, policyId openapi_types.UUID)
+	// Put Policy
+	// (PUT /v1/{namespaceId}/policies/{policyId})
+	PutPolicyV1(c *gin.Context, namespaceId openapi_types.UUID, policyId openapi_types.UUID)
 }
 
 // ServerInterfaceWrapper converts contexts to parameters.
@@ -250,15 +275,15 @@ type ServerInterfaceWrapper struct {
 
 type MiddlewareFunc func(c *gin.Context)
 
-// CreateCertificateV1 operation middleware
-func (siw *ServerInterfaceWrapper) CreateCertificateV1(c *gin.Context) {
+// ListCertificatesV1 operation middleware
+func (siw *ServerInterfaceWrapper) ListCertificatesV1(c *gin.Context) {
 
 	var err error
 
 	// ------------- Path parameter "namespaceId" -------------
-	var namespaceID NamespaceID
+	var namespaceId openapi_types.UUID
 
-	err = runtime.BindStyledParameter("simple", false, "namespaceId", c.Param("namespaceId"), &namespaceID)
+	err = runtime.BindStyledParameter("simple", false, "namespaceId", c.Param("namespaceId"), &namespaceId)
 	if err != nil {
 		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter namespaceId: %w", err), http.StatusBadRequest)
 		return
@@ -273,7 +298,33 @@ func (siw *ServerInterfaceWrapper) CreateCertificateV1(c *gin.Context) {
 		}
 	}
 
-	siw.Handler.CreateCertificateV1(c, namespaceID)
+	siw.Handler.ListCertificatesV1(c, namespaceId)
+}
+
+// CreateCertificateV1 operation middleware
+func (siw *ServerInterfaceWrapper) CreateCertificateV1(c *gin.Context) {
+
+	var err error
+
+	// ------------- Path parameter "namespaceId" -------------
+	var namespaceId openapi_types.UUID
+
+	err = runtime.BindStyledParameter("simple", false, "namespaceId", c.Param("namespaceId"), &namespaceId)
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter namespaceId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	c.Set(BearerAuthScopes, []string{})
+
+	for _, middleware := range siw.HandlerMiddlewares {
+		middleware(c)
+		if c.IsAborted() {
+			return
+		}
+	}
+
+	siw.Handler.CreateCertificateV1(c, namespaceId)
 }
 
 // GetCertificateV1 operation middleware
@@ -282,9 +333,9 @@ func (siw *ServerInterfaceWrapper) GetCertificateV1(c *gin.Context) {
 	var err error
 
 	// ------------- Path parameter "namespaceId" -------------
-	var namespaceID NamespaceID
+	var namespaceId openapi_types.UUID
 
-	err = runtime.BindStyledParameter("simple", false, "namespaceId", c.Param("namespaceId"), &namespaceID)
+	err = runtime.BindStyledParameter("simple", false, "namespaceId", c.Param("namespaceId"), &namespaceId)
 	if err != nil {
 		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter namespaceId: %w", err), http.StatusBadRequest)
 		return
@@ -332,20 +383,29 @@ func (siw *ServerInterfaceWrapper) GetCertificateV1(c *gin.Context) {
 		}
 	}
 
-	siw.Handler.GetCertificateV1(c, namespaceID, id, params)
+	siw.Handler.GetCertificateV1(c, namespaceId, id, params)
 }
 
-// ListCertificatesV1 operation middleware
-func (siw *ServerInterfaceWrapper) ListCertificatesV1(c *gin.Context) {
+// GetPolicyV1 operation middleware
+func (siw *ServerInterfaceWrapper) GetPolicyV1(c *gin.Context) {
 
 	var err error
 
 	// ------------- Path parameter "namespaceId" -------------
-	var namespaceID NamespaceID
+	var namespaceId openapi_types.UUID
 
-	err = runtime.BindStyledParameter("simple", false, "namespaceId", c.Param("namespaceId"), &namespaceID)
+	err = runtime.BindStyledParameter("simple", false, "namespaceId", c.Param("namespaceId"), &namespaceId)
 	if err != nil {
 		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter namespaceId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	// ------------- Path parameter "policyId" -------------
+	var policyId openapi_types.UUID
+
+	err = runtime.BindStyledParameter("simple", false, "policyId", c.Param("policyId"), &policyId)
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter policyId: %w", err), http.StatusBadRequest)
 		return
 	}
 
@@ -358,20 +418,29 @@ func (siw *ServerInterfaceWrapper) ListCertificatesV1(c *gin.Context) {
 		}
 	}
 
-	siw.Handler.ListCertificatesV1(c, namespaceID)
+	siw.Handler.GetPolicyV1(c, namespaceId, policyId)
 }
 
-// GetPolicyCertEnrollV1 operation middleware
-func (siw *ServerInterfaceWrapper) GetPolicyCertEnrollV1(c *gin.Context) {
+// PutPolicyV1 operation middleware
+func (siw *ServerInterfaceWrapper) PutPolicyV1(c *gin.Context) {
 
 	var err error
 
 	// ------------- Path parameter "namespaceId" -------------
-	var namespaceID NamespaceID
+	var namespaceId openapi_types.UUID
 
-	err = runtime.BindStyledParameter("simple", false, "namespaceId", c.Param("namespaceId"), &namespaceID)
+	err = runtime.BindStyledParameter("simple", false, "namespaceId", c.Param("namespaceId"), &namespaceId)
 	if err != nil {
 		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter namespaceId: %w", err), http.StatusBadRequest)
+		return
+	}
+
+	// ------------- Path parameter "policyId" -------------
+	var policyId openapi_types.UUID
+
+	err = runtime.BindStyledParameter("simple", false, "policyId", c.Param("policyId"), &policyId)
+	if err != nil {
+		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter policyId: %w", err), http.StatusBadRequest)
 		return
 	}
 
@@ -384,33 +453,7 @@ func (siw *ServerInterfaceWrapper) GetPolicyCertEnrollV1(c *gin.Context) {
 		}
 	}
 
-	siw.Handler.GetPolicyCertEnrollV1(c, namespaceID)
-}
-
-// PutPolicyCertEnrollV1 operation middleware
-func (siw *ServerInterfaceWrapper) PutPolicyCertEnrollV1(c *gin.Context) {
-
-	var err error
-
-	// ------------- Path parameter "namespaceId" -------------
-	var namespaceID NamespaceID
-
-	err = runtime.BindStyledParameter("simple", false, "namespaceId", c.Param("namespaceId"), &namespaceID)
-	if err != nil {
-		siw.ErrorHandler(c, fmt.Errorf("Invalid format for parameter namespaceId: %w", err), http.StatusBadRequest)
-		return
-	}
-
-	c.Set(BearerAuthScopes, []string{})
-
-	for _, middleware := range siw.HandlerMiddlewares {
-		middleware(c)
-		if c.IsAborted() {
-			return
-		}
-	}
-
-	siw.Handler.PutPolicyCertEnrollV1(c, namespaceID)
+	siw.Handler.PutPolicyV1(c, namespaceId, policyId)
 }
 
 // GinServerOptions provides options for the Gin server.
@@ -440,9 +483,9 @@ func RegisterHandlersWithOptions(router gin.IRouter, si ServerInterface, options
 		ErrorHandler:       errorHandler,
 	}
 
-	router.POST(options.BaseURL+"/v1/:namespaceId/certificate", wrapper.CreateCertificateV1)
-	router.GET(options.BaseURL+"/v1/:namespaceId/certificate/:id", wrapper.GetCertificateV1)
 	router.GET(options.BaseURL+"/v1/:namespaceId/certificates", wrapper.ListCertificatesV1)
-	router.GET(options.BaseURL+"/v1/:namespaceId/policy/cert-enrollment", wrapper.GetPolicyCertEnrollV1)
-	router.PUT(options.BaseURL+"/v1/:namespaceId/policy/cert-enrollment", wrapper.PutPolicyCertEnrollV1)
+	router.POST(options.BaseURL+"/v1/:namespaceId/certificates", wrapper.CreateCertificateV1)
+	router.GET(options.BaseURL+"/v1/:namespaceId/certificates/:id", wrapper.GetCertificateV1)
+	router.GET(options.BaseURL+"/v1/:namespaceId/policies/:policyId", wrapper.GetPolicyV1)
+	router.PUT(options.BaseURL+"/v1/:namespaceId/policies/:policyId", wrapper.PutPolicyV1)
 }
