# backend/admin/admin_server.go
@@ -1,13 +1,11 @@
 package admin
 
 import (
-	"context"
 	"log"
 
 	"github.com/Azure/azure-sdk-for-go/sdk/data/azcosmos"
 	"github.com/Azure/azure-sdk-for-go/sdk/storage/azblob"
 	azblobcontainer "github.com/Azure/azure-sdk-for-go/sdk/storage/azblob/container"
-	"github.com/google/uuid"
 	"github.com/stephenzsy/small-kms/backend/common"
 )
 
@@ -19,12 +17,6 @@ type adminServer struct {
 	azCosmosDatabaseClient          *azcosmos.DatabaseClient
 	azCosmosContainerClientCerts    *azcosmos.ContainerClient
 	azCosmosContainerClientPolicies *azcosmos.ContainerClient
-}
-
-type AdminServerInternal interface {
-	ReadCertEnrollPolicyDBItem(ctx context.Context, namespaceID uuid.UUID) (result CertificateEnrollmentPolicyDTO, err error)
-	ReadCertDBItem(c context.Context, namespaceID uuid.UUID, id uuid.UUID) (result CertDBItem, err error)
-	FetchCertificatePEMBlob(ctx context.Context, blobName string) ([]byte, error)
 }
 
 func NewAdminServer() *adminServer {
